# Aevum-Continuum-API

./: .gitignore  README.md  pyproject.toml
app/: dependencies.py  main.py
app/routes/: auth.py  categories.py  enums.py  events.py  regions.py  relationships.py  sources.py  submissions.py  tags.py
app/schemas/: __init__.py  categories.py  enums.py  events.py  regions.py  relationships.py  sources.py  submissions.py  tags.py
migrations/: 001_initial_schema.sql  002_seed_data.sql
